<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GottaDO</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_description">This is an example long description of the task that I want to show&#8230;</string>
    <string name="test_priority_high">Priority: HIGH</string>
    <string name="test_title">This is a long TODO task title text</string>
    <string name="no_title">No title</string>
    <string name="no_description">No description</string>
    <string name="priority_">"Priority: "</string>
    <string name="due_date_">"Due date: "</string>
    <string name="choose_date">Choose date</string>
    <string name="title">Title</string>
    <string name="task_decription">Task decription..</string>
    <string name="add_task">Add task</string>

    <string-array name="priority_spinner">
        <item>LOW</item>
        <item>NORMAL</item>
        <item>HIGH</item>
    </string-array>
    <string-array name="drawer_options">
        <item>Show all</item>
        <item>Due today</item>
        <item>Show unfinished</item>
        <item>Show by priority</item>
        <item>Show completed</item>
    </string-array>

    <string name="save">Save</string>
    <string name="no_content">There are no items in your GottaDO list. You can add one by choosing the plus sign from the title bar</string>
    <string name="n_a">N/A</string>
    <string name="action_sort">Sort</string>
    <string name="action_show_completed">Show completed</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="action_show_all">Show all</string>
    <string name="no_completed">There are no completed tasks in the list.</string>
    <string name="action_show_unfinished">Show unfinished</string>
    <string name="no_unfinished">There are no unfinished tasks in the list.</string>
    <string name="no_today">There are no tasks in the list due today.</string>
    <string name="no_priority">There are no tasks in the list with </string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="exit">Exit</string>
    <string name="action_sort_by_priority">Sort by priority</string>
    <string name="action_sort_by_date">Sort by date</string>
    <string name="action_clear_sorting">Clear sorting</string>
    <string name="clear_expired">Are you sure you want to delete all expired tasks?</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="action_delete_expired">Delete expired</string>
    <string name="action_delete_completed">Delete completed</string>
    <string name="clear_completed">Are you sure you want to delete all completed tasks?</string>
    <string name="show_by_priority">Show by priority</string>
	<string name="local_service_started">Local service started</string>
	<string name="local_service_stopped">Local service stopped</string>
	<string name="click_here_to_see_them_">Click here to see them.</string>
	<string name="check_your_gottado_list_now_">Check your GottaDO list now.</string>
	<string name="about">About</string>
	<string name="how_to_use">About the application</string>
	<string name="about_text">GottaDO is a simple and easy to use, TODO list application 
	    where you can easily organize your everyday life and let us do the remembering for you.\n\n
	    Add a task, set a due date, or a higher priority if you like, and GottaDO will
	    remind you when the time comes.\n\nYou can filter the list by priority, see the unfinished
	    tasks, or the ones that you have completed, or just show the task that are due today.
	    Search through the list and sort the results by priority, or due date, and delete all the
	    expired or completed tasks when you want, all with a simple select from the application menu.
	    GottaDO also contains a home screen quick add task widget that might come in handy.\n\n
	    Hope you have fun, and find a good use for GottaDO.</string>
    
</resources>