<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_1386647152_document_add"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="101"
        android:title="@string/action_sort"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_completed"
        android:orderInCategory="102"
        android:title="@string/action_show_completed"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_pending"
        android:orderInCategory="103"
        android:title="@string/action_show_unfinished"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_all"
        android:orderInCategory="104"
        android:title="@string/action_show_all"
        app:showAsAction="never"/>

</menu>