<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/add_task_dialog"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_launcher"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/add_task"
        android:textSize="@dimen/text_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator"
        android:layout_marginBottom="5dp"
        android:background="@color/darkRed" />

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:gravity="top|left"
        android:hint="@string/task_decription"
        android:inputType="text"
        android:lines="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/taskChooseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/black_button_gradient"
            android:text="@string/choose_date"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/taskDateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date_"
            android:textColor="@color/titleGrey"
            android:textSize="@dimen/text_description"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textColor="@color/titleGrey"
            android:textSize="@dimen/text_description" />
    </LinearLayout>

    <Button
        android:id="@+id/taskSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/green_button_gradient"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>